show peeps and add peep working

--- a/views/new_peep.erb
+++ b/views/new_peep.erb
@@ -1,8 +1,7 @@
 <h1> Send your peep into the world of Chitter </h1>
 
 <form action="/new_peep" method="post">
-  <li>
-    <label for="New Peep">New Peep</label>
-    <input type="text" name="New Peep", placeholder="Type here" />
+    <label for="new_peep">New Peep</label>
+    <input type="text" name="new_peep", placeholder="Type here" />
     <input type="submit" value="Post">
-  </li>
+</form>
